Removed the need to distinguish between two Iterable implementations.